--- a/package.json
+++ b/package.json
@@ -25,7 +25,15 @@
   "dependencies": {
     "express": "~4.13.3",
     "socket.io": "~1.3.6",
-    "nodegit": "~0.4.1"
+    "nodegit": "~0.4.1",
+    "del": "~2.0.2",
+    "gulp": "~3.9.0",
+    "webpack": "~1.12.2",
+    "gulp-nodemon": "~2.0.4",
+    "gulp-cli": "~0.3.0",
+    "gulp-util": "~3.0.6",
+    "d3": "~3.5.6",
+    "socket.io-client": "~1.3.7"
   },
   "devDependencies": {
     "eslint": "~1.4.3"
